<resources>
    <string name="app_name">SheSafe</string>
    <string name="she_safe_logo_in_landscape">She Safe logo in landscape</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="add_profile_photo">Add profile photo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="personal_description">Personal Description</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="she_safe_map">She Safe Map</string>
    <string name="your_profile">Your profile</string>
    <string name="table_view">Table view</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="emergency_message">Emergency Message</string>
    <string name="your_emergency_contacts">Your emergency contacts</string>
    <string name="phone_number">Phone number:</string>
    <string name="nickname">Nickname:</string>
    <string name="add">Add</string>
    <string name="add_a_new_contact">Add a new contact</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
</resources>