<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/she_safe_logo_in_landscape"
        app:srcCompat="@drawable/ic_she_safe_landscape" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_below="@+id/ivIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="#6BFFFFFF"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_below="@+id/etUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="#6BFFFFFF"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btnAddProfilePhoto"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/ss_pink"
        android:text="@string/login"
        android:textStyle="bold"
        app:cornerRadius="50dp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/ss_pink"
        android:text="@string/sign_up"
        android:textStyle="bold"
        app:cornerRadius="50dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAddProfilePhoto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>