<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:contentPaddingBottom="8dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="300dp"
            android:layout_height="160dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/she_safe_logo_in_landscape"
            app:srcCompat="@drawable/ic_she_safe_landscape" />

        <ImageView
            android:id="@+id/ivProfilePhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/ivIcon"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btnAddProfilePhoto"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_alignStart="@+id/etUsername"
            android:layout_alignTop="@+id/ivProfilePhoto"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/ss_pink"
            android:text="@string/add_profile_photo"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="50dp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="161dp"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/ivProfilePhoto"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@+id/ivProfilePhoto"
            android:background="@drawable/edit_text_background"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:paddingStart="8dp"
            android:textColor="@color/white"
            android:textColorHint="#6BFFFFFF"
            android:textSize="14sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_below="@+id/ivProfilePhoto"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:paddingStart="8dp"
            android:textColor="@color/white"
            android:textColorHint="#6BFFFFFF"
            android:textSize="14sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/etFirstName"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/etFirstName"
            android:background="@drawable/edit_text_background"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:paddingStart="8dp"
            android:textColor="@color/white"
            android:textColorHint="#6BFFFFFF"
            android:textSize="14sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="144dp"
            android:layout_height="40dp"
            android:layout_below="@+id/etFirstName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="31dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="29dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:padding="5dp"
            android:paddingStart="8dp"
            android:textColor="@color/white"
            android:textColorHint="#6BFFFFFF"
            android:textSize="14sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/etPersonalDescription"
            android:layout_width="161dp"
            android:layout_height="65dp"
            android:layout_below="@+id/etEmail"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/personal_description"
            android:inputType="textPersonName|textMultiLine"
            android:padding="5dp"
            android:paddingStart="8dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textColorHint="#6BFFFFFF"
            android:textSize="14sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="144dp"
            android:layout_height="40dp"
            android:layout_below="@+id/etPersonalDescription"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="#6BFFFFFF"
            android:textSize="14sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/etPasswordConfirm"
            android:layout_width="144dp"
            android:layout_height="40dp"
            android:layout_below="@+id/etPassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="#6BFFFFFF"
            android:textSize="14sp"
            android:textStyle="normal" />


        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPasswordConfirm"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/ss_pink"
            android:text="@string/sign_up"
            android:textStyle="bold"
            app:cornerRadius="50dp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>