<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    tools:context=".fragments.ProfileUserFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageButton
                android:id="@+id/btnLogout"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/separation_border_parent"
                android:layout_marginTop="@dimen/separation_border_parent"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_logout"
                app:tint="@color/red_ss" />
            <ImageButton
                android:id="@+id/btnSaveChanges"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/separation_border_parent"
                android:layout_marginEnd="@dimen/separation_border_parent"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_save_changes"
                app:tint="@color/green_ss" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:text=""
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="ElmerAdrianV" />

            <ImageView
                android:id="@+id/ivProfilePhoto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/tvUsername"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/btnChangeProfilePhoto"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivProfilePhoto"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/ss_pink"
                android:text="@string/change_profile_photo"
                android:textSize="12sp"
                android:textStyle="bold"
                app:cornerRadius="50dp" />

            <ImageButton
                android:id="@+id/btnEditFirstName"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_above="@+id/etFirstName"
                android:layout_alignEnd="@+id/etFirstName"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="@dimen/separation_edit_button"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_edit"
                app:tint="@color/blue_cute" />


            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_below="@+id/btnChangeProfilePhoto"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/separation_border_parent"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:paddingStart="8dp"
                android:textColor="@color/white"
                android:textColorHint="#6BFFFFFF"
                android:textSize="14sp"
                android:textStyle="normal" />

            <ImageButton
                android:id="@+id/btnEditLastName"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_above="@+id/etLastName"
                android:layout_alignEnd="@+id/etLastName"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="2dp"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_edit"
                app:tint="@color/blue_cute" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_alignBottom="@+id/etFirstName"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="@dimen/separation_border_parent"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/etFirstName"
                android:background="@drawable/edit_text_background"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:paddingStart="8dp"
                android:textColor="@color/white"
                android:textColorHint="#6BFFFFFF"
                android:textSize="14sp"
                android:textStyle="normal" />

            <ImageButton
                android:id="@+id/btnEditEmail"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_above="@+id/etEmail"
                android:layout_alignEnd="@+id/etEmail"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="@dimen/separation_edit_button"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_edit"
                app:tint="@color/blue_cute" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="144dp"
                android:layout_height="40dp"
                android:layout_below="@+id/etFirstName"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/separation_border_parent"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="@dimen/separation_border_parent"
                android:background="@drawable/edit_text_background"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"
                android:padding="5dp"
                android:paddingStart="8dp"
                android:textColor="@color/white"
                android:textColorHint="#6BFFFFFF"
                android:textSize="14sp"
                android:textStyle="normal" />

            <ImageButton
                android:id="@+id/btnEditPersonalDescription"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_above="@+id/etPersonalDescription"
                android:layout_alignEnd="@+id/etPersonalDescription"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="@dimen/separation_edit_button"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_edit"
                app:tint="@color/blue_cute" />

            <EditText
                android:id="@+id/etPersonalDescription"
                android:layout_width="161dp"
                android:layout_height="65dp"
                android:layout_below="@+id/etEmail"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/separation_border_parent"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="@dimen/separation_border_parent"
                android:background="@drawable/edit_text_background"
                android:hint="@string/personal_description"
                android:inputType="textPersonName|textMultiLine"
                android:padding="5dp"
                android:paddingStart="8dp"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textColorHint="#6BFFFFFF"
                android:textSize="14sp"
                android:textStyle="normal" />


            <ImageButton
                android:id="@+id/btnEditPassword"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_above="@+id/etPassword"
                android:layout_alignEnd="@+id/etPassword"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="@dimen/separation_edit_button"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_edit"
                app:tint="@color/blue_cute" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="144dp"
                android:layout_height="40dp"
                android:layout_below="@+id/etPersonalDescription"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/separation_border_parent"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="@dimen/separation_border_parent"
                android:background="@drawable/edit_text_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textColorHint="#6BFFFFFF"
                android:textSize="14sp"
                android:textStyle="normal" />

            <ImageButton
                android:id="@+id/btnEditEmergencyContact"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_above="@+id/etEmergencyMessage"
                android:layout_alignEnd="@+id/etPassword"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="@dimen/separation_edit_button"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_edit"
                app:tint="@color/blue_cute" />

            <EditText
                android:id="@+id/etEmergencyMessage"
                android:layout_width="161dp"
                android:layout_height="65dp"
                android:layout_below="@+id/etPassword"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/separation_border_parent"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="@dimen/separation_border_parent"
                android:background="@drawable/edit_text_background"
                android:hint="@string/emergency_message"
                android:inputType="textPersonName|textMultiLine"
                android:padding="5dp"
                android:paddingStart="8dp"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textColorHint="#6BFFFFFF"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvEmergencyContacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etEmergencyMessage"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/separation_border_parent"
                android:layout_marginTop="10dp"
                android:text="@string/your_emergency_contacts"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvEmergencyContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvEmergencyContacts"
                android:layout_marginTop="5dp" />

            <ImageButton
                android:id="@+id/btnAddContact"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/tvEmergencyContacts"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/separation_border_parent"
                android:layout_marginBottom="0dp"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_add"
                app:tint="@color/blue_cute" />


        </RelativeLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>
